--- a/.github/workflows/gdpr-data-refresh.yaml
+++ b/.github/workflows/gdpr-data-refresh.yaml
@@ -107,12 +107,17 @@
                 --attribute-name restore \
                 --values-to-add "${{ env.DEST_ACCOUNT_ID }}"
     
-          - name: Configure AWS Credentials
-            uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
-            with:
-              role-to-assume: "arn:aws:iam::${{ env.DEST_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-              role-session-name: "gdpr-data-refresh-${{ github.run_number }}"
-              aws-region: "eu-west-2"
+      destination_account:
+          runs-on: ubuntu-latest
+          environment: delius-core-${{ inputs.dest_environment }}
+          needs: [source_account, get_source_account_id, get_dest_account_id]
+          steps:
+              - name: Configure AWS Credentials
+                uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
+                with:
+                    role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+                    role-session-name: "${{ inputs.rds_instance }}-data-refresh-${{ github.run_number }}"
+                    aws-region: "eu-west-2"
     
           - name: Set final snapshot name string
             run: |
