--- a/.github/workflows/gdpr-data-refresh.yaml
+++ b/.github/workflows/gdpr-data-refresh.yaml
@@ -163,7 +163,7 @@
           - name: Store identifier in SSM parameter store
             run: |
               aws ssm put-parameter \
-                --name "/gdpr/snapshot_id" \
+                --name "/${{ inputs.rds_instance }}/snapshot_id" \
                 --value "${{ env.FINAL_SNAPSHOT_DEST_COPY_NAME }}" \
                 --type "String" \
                 --overwrite \
