Run weblogic task if in delius-core environment

--- a/playbooks/oracle_licence_audit/audit.yml
+++ b/playbooks/oracle_licence_audit/audit.yml
@@ -27,7 +27,7 @@
       include_role:
         name: audit
         tasks_from: audit-weblogic
-      when: audit is defined
+      when: audit is defined and environment_name | regex_search('delius-core')
       run_once: yes
 
     - name: Run Upload Task
