--- a/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
+++ b/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
@@ -9,10 +9,10 @@
   shell: aws ecs describe-clusters --clusters {{ weblogic_cluster }} --region {{ region }} | jq -r '.clusters[].registeredContainerInstancesCount'
   register: container_count
 
-- name: List services that contain '-weblogic' in the name
+- name: List services that contain 'weblogic' in the name
   delegate_to: localhost
   become: no
-  shell: aws ecs list-services --cluster {{ weblogic_cluster }} --region {{ region }} | jq -r '.serviceArns[]' | egrep -- "-weblogic" | awk -F'/' '{print $NF}'
+  shell: aws ecs list-services --cluster {{ weblogic_cluster }} --region {{ region }} | jq -r '.serviceArns[]' | egrep -- "weblogic" | awk -F'/' '{print $NF}'
   register: weblogic_services
 
 - name: Create temporary weblogic dictionary and Initalise variables
