--- a/.github/workflows/delius-core-rds-data-refresh.yaml
+++ b/.github/workflows/delius-core-rds-data-refresh.yaml
@@ -1,5 +1,5 @@
 ---
-    name: "gdpr: Data Refresh"
+    name: "Delius Core: RDS instance Data Refresh"
     permissions:
       id-token: write # This is required for requesting the JWT
       contents: read # This is required for actions/checkout
