--- a/.github/workflows/delius-core-rds-data-refresh.yaml
+++ b/.github/workflows/delius-core-rds-data-refresh.yaml
@@ -42,8 +42,8 @@
             description: "Select rds instance for refreshing"
             default: "true"
             options:
-                - "merge"
-                - "gdpr"
+                - "merge-api"
+                - "gdpr-api"
             required: true 
     
     jobs:
@@ -87,7 +87,7 @@
             run: |
               overnight_snapshot_identifier=$(aws rds describe-db-snapshots \
                 --snapshot-type "automated" \
-                --db-instance-identifier "${{ inputs.rds_instance }}" \
+                --db-instance-identifier "${{ inputs.rds_instance }}-${{ inputs.source_environment }}-db" \
                 --query "reverse(sort_by(DBSnapshots, &SnapshotCreateTime))[0].DBSnapshotIdentifier" \
                 --output text)
               if [ -z "$overnight_snapshot_identifier" ]; then
