--- a/.github/workflows/delius-core-rds-data-refresh.yaml
+++ b/.github/workflows/delius-core-rds-data-refresh.yaml
@@ -73,7 +73,7 @@
         environment: delius-core-${{ inputs.source_environment }}-preapproved
         outputs:
             DATETIME_STRING: "${{ steps.name.outputs.DATETIME_STRING }}"
-            SNAPSHOT_SOURCE_COPY_NAME": "${{ steps.name.outputs.SNAPSHOT_SOURCE_COPY_NAME }}"
+            SNAPSHOT_SOURCE_COPY_NAME: "${{ steps.name.outputs.SNAPSHOT_SOURCE_COPY_NAME }}"
         steps:
           - name: Configure AWS Credentials
             uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
