--- a/playbooks/oracle_interim_patch/oracle_interim_patch/tasks/build-patching-requirements.yml
+++ b/playbooks/oracle_interim_patch/oracle_interim_patch/tasks/build-patching-requirements.yml
@@ -88,7 +88,7 @@
     - item.value.install_request
     - item.value.grid_patch
     - item.value.install_to_grid_required
-    - not item.value.install_with_opatchauto
+    - not (item.value.install_with_opatchauto | default(false))
 
 # Summarize whether we need to shutdown Grid - this is if any Grid patching is required
 - name: Set Grid Shutdown Needed
@@ -138,7 +138,7 @@
   with_dict: "{{ required_patches }}"
   when:
     - item.value.install_request
-    - (item.value.install_to_grid_required and not item.value.install_with_opatchauto) or item.value.install_to_database_required
+    - (item.value.install_to_grid_required and not (item.value.install_with_opatchauto | default(false)) or item.value.install_to_database_required
     - item.value.shutdown_required
 
 - name: Set Database Shutdown Not Needed
