--- a/docker/delius-ansible-aws/Dockerfile
+++ b/docker/delius-ansible-aws/Dockerfile
@@ -1,18 +1,4 @@
-# Stage 1 of multi-stage docker file - build the session-manager plugin
-FROM golang:1.15.3-alpine as ssm-builder
-
-ARG VERSION=1.2.553.0
-
-RUN set -ex && apk add --no-cache make git gcc libc-dev curl bash zip && \
-  curl -sLO https://github.com/aws/session-manager-plugin/archive/${VERSION}.tar.gz && \
-  mkdir -p /go/src/github.com && \
-  tar xzf ${VERSION}.tar.gz && \
-  mv session-manager-plugin-${VERSION} /go/src/github.com/session-manager-plugin && \
-  cd /go/src/github.com/session-manager-plugin && \
-  make release
-
-# Stage 2 of multi-stage docker file - build the final image that copies in the plugin built above
-FROM python:3-alpine3.19
+FROM python:3-slim
 
 LABEL org.opencontainers.image.authors="HMPPS Probation Webops Team (probation-webops@digital.justice.gov.uk)" \
   org.opencontainers.image.vendor="Ministry of Justice" \
@@ -20,20 +6,17 @@ LABEL org.opencontainers.image.authors="HMPPS Probation Webops Team (probation-w
   org.opencontainers.image.description="delius-ansible-aws" \
   org.opencontainers.image.source="https://github.com/ministryofjustice/hmpps-delius-operational-automation"
 
-RUN apk update --no-cache \
-    && apk upgrade --no-cache \
-    && apk add jq bash git
+RUN apt update && apt install -y curl git bash jq && apt clean
+
+RUN if [[curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb" && dpkg -i session-manager-plugin.deb ]];\ 
+  then echo "Session manager plugin installed"; else rm -f session-manager-plugin.deb && curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_arm64/session-manager-plugin.deb" -o "session-manager-plugin.deb" && dpkg -i session-manager-plugin.deb; fi
 
 # Pip
-RUN pip install -U pip;
 COPY requirements.txt requirements.yml ./
-RUN pip install --upgrade -r requirements.txt \
+RUN pip install -U pip && pip install --upgrade -r requirements.txt \
   && ansible-galaxy collection install -r requirements.yml \
   && ansible-galaxy role install -r requirements.yml
 
-# Install session manager
-COPY  --from=ssm-builder /go/src/github.com/session-manager-plugin/bin/linux_amd64_plugin/session-manager-plugin /usr/local/bin/
-
-RUN adduser -D -u 1001 ansible
+RUN useradd -m -u 1001 -s /bin/bash ansible && passwd -d ansible
 
 USER ansible
