Do not bounce Snapshot Standby Database (#309)
* Do not bounce Snapshot Standby Database

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playbooks/oracle_release_update/oracle_release_update/tasks/enable_adg.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/enable_adg.yml
@@ -18,8 +18,11 @@
         . ~/.bash_profile
         srvctl modify database -d ${ORACLE_SID} -startoption "read only"
 
+# Do not bounce an open database -- it will be in use as a Snapshot Standby
 - name: Bounce Standby Database Following Config Change
-  when: adg_config.stdout_lines[-1] != 'read only'
+  when:
+    - adg_config.stdout_lines[-1] != 'mount'
+    - adg_config.stdout_lines[-1] != 'open'
   block:
     - name: Shutdown Database
       include_tasks: shutdown_database.yml
